Create CRUD end points to manipulate motor object

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_CONNECTION_STRING=mongodb+srv://katlegomashego37:<tpYjU1GLRirFL58H>@cluster0.ei89xwq.mongodb.net/motors?retryWrites=true&w=majority&appName=Cluster0
+MONGO_CONNECTION_STRING=mongodb+srv://katlegomashego37:O09zPztUdrXg0UKE@cluster0.ei89xwq.mongodb.net/motors?retryWrites=true&w=majority&appName=Cluster0
